# graphql-to-postman

./: README.md  pyproject.toml
src/graphql_to_postman/: generate_collection.py  main.py
src/graphql_to_postman/helpers/: helper.py
