[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphql-to-postman"
dynamic = ["version"]
description = 'A Python package which converts a given graphql schema/URL to a postman collection'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["postman","graphql","graphql_to_postman"]
authors = [
  { name = "Deepak Sanjay S J", email = "deepaksanjaysj@gmail.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: Hatch",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["argparse"]

[project.urls]
Documentation = "https://github.com/DeepakSan/graphql-to-postman/blob/main/README.md"
Issues = "https://github.com/DeepakSan/graphql-to-postman/issues"
Source = "https://github.com/DeepakSan/graphql-to-postman"

[tool.hatch.version]
path = "src/graphql_to_postman/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/graphql_to_postman tests}"

[tool.coverage.run]
source_pkgs = ["graphql_to_postman", "tests"]
branch = true
parallel = true
omit = [
  "src/graphql_to_postman/__about__.py",
]

[tool.coverage.paths]
graphql_to_postman = ["src/graphql_to_postman", "*/graphql-to-postman/src/graphql_to_postman"]
tests = ["tests", "*/graphql-to-postman/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
